<resources>
    <string name="app_name">Masafah</string>
    <string name="mobile">Mobile</string>
    <string name="shipment_name">Shipment Category*</string>
    <string name="description">Description*</string>
    <string name="next">Next</string>
    <string name="items">Items</string>
    <string name="add_new_shipment">Add new shipment</string>
    <string name="add_new_item">Add new item</string>
    <string name="select_location">Select location</string>
    <string name="pickup_location">Pickup Location</string>
    <string name="price">Price</string>
    <string name="shipment_number">Shipment #</string>
    <string name="category_already_added">Category already added.</string>
    <string name="pending">Pending</string>
    <string name="distance">Distance</string>
    <string name="accepted">Accepted</string>
    <string name="by">By</string>
    <string name="shipment_details">Shipment details</string>
    <string name="delivered">Delivered</string>
    <string name="total">Total:</string>
    <string name="canceled">Canceled</string>
    <string name="no_shipments_message">There are no shipments</string>
    <string name="shipment_history">Shipment history</string>
    <string name="profile">Profile</string>
    <string name="logout">Logout</string>
    <string name="company_details">Company details</string>
    <string name="company_test_description">International shipping, courier, and packaging service. DHL was
        established in 1969 by Adrian Dalsey, Larry Hillblom, and Robert Lynn. The name DHL is derived from the
        first initial of each founder\'s last name. DHL has numerous cargo transport systems including planes,
        trains, and boats. DHL serves more than 120,000 designations and 220 countries. As of 2002, Deutsche Post
        World Net owns the majority of shares.</string>
    <string name="continue_button">Continue</string>
    <string name="my_shipments">My shipments</string>
    <string name="select_companies">Select companies</string>
    <string name="select_all">Select all</string>
    <string name="invoice">Invoice</string>
    <string name="confirm">Confirm</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="failed">Failed</string>
    <string name="missing_data">Some information are missing.</string>
    <string name="error_occurred">Error occurred, Please try again.</string>
    <string name="resend_otp">Resend OTP</string>
    <string name="select_country">Select country</string>
    <string name="termsandconditions">Terms &amp; Conditions</string>
    <string name="select_category">Select category</string>
    <string name="please_select_category_name_for_previous_shipment">Please select category name for previous shipment</string>
    <string name="please_select_a_company_or_more_first">Please select a company or more first</string>
    <string name="select_language">Select Language</string>
    <string name="select_picture_from">Select picture from :</string>
    <string name="camera">Camera</string>
    <string name="gallery">Gallery</string>
    <string name="edit_mobile">Change mobile number</string>
    <string name="cancel">Cancel</string>
    <string name="please_enter_valid_mobile_number">* Please enter valid mobile number.</string>
    <string name="count">Count</string>
    <string name="language">Language</string>
    <string name="my_details">My details</string>
    <string name="update">Update</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="unselect_all">Unselect all</string>
    <string name="please_enter_mobile_number">Please enter your mobil number</string>
    <string name="verify_your_mobile_number">Verify your mobile number</string>
    <string name="enter_your_otp_code_here">Enter your OTP code here</string>
    <string name="verify_now">Verify now</string>
    <string name="select_address_from">Select Address from</string>
    <string name="my_address">My Addresses</string>
    <string name="map">Map</string>
    <string name="please_enter_location_name">Please enter location name</string>
    <string name="please_enter_area">Please enter area</string>
    <string name="please_enter_street">please enter street</string>
    <string name="please_enter_building">Please enter building</string>
    <string name="please_enter_block">Please enter block</string>
    <string name="please_select_pickup_address">Please select pickup address</string>
    <string name="please_select_drop_address">Please select drop address</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="location_name">Location name</string>
    <string name="area">Area</string>
    <string name="street">Street</string>
    <string name="block">Block</string>
    <string name="building">Building</string>
    <string name="address_details">Address details</string>
    <string name="notes">Notes</string>
    <string name="pickup_time">Pickup time</string>
    <string name="to">To *</string>
    <string name="from">From*</string>
    <string name="please_select_pickup_time_from">Please select pickup time from.</string>
    <string name="please_select_pickup_time_to">Please select pickup time to</string>
    <string name="pickup_time_from">Pickup time from :</string>
    <string name="pickup_time_to">Pickup time to :</string>
    <string name="kd">Kd</string>
    <string name="about_as">About us</string>
    <string name="rate">Rate</string>
    <string name="call">Call</string>
    <string name="drop_location">Drop location</string>
    <string name="wrong_code">Wrong code</string>
    <string name="today">Today</string>
    <string name="update_mobile_number">Update mobile number</string>
    <string name="number_not_changed">Number not changed</string>
    <string name="you_must_add_at_least_one_shipment">You must add at least one shipment</string>
    <string name="country">Country</string>
    <string name="governorate">Governorate</string>
    <string name="city">City</string>
    <string name="add_new_address">Add new address</string>
    <string name="otp_resend_successfully">OTP resend successfully</string>
    <string name="are_you_want_to_call">Are you want to call</string>
    <string name="question_mark">\?</string>

</resources>
