<?xml version="1.0" encoding="utf-8"?>
<com.chauthai.swipereveallayout.SwipeRevealLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/sw"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginEnd="18dp"
    android:layout_marginRight="18dp"
    android:layout_marginBottom="12dp"
    app:mode="same_level">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_edit"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@color/colorPrimary"
            android:gravity="center"
            android:paddingStart="20dp"
            android:paddingEnd="20dp"
            android:text="@string/edit"
            android:textColor="@android:color/white" />

        <TextView
            android:id="@+id/tv_delete"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:background="@android:color/holo_red_dark"
            android:gravity="center"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:text="@string/delete"
            android:textColor="@android:color/white" />
    </LinearLayout>

    <android.support.constraint.ConstraintLayout
        android:id="@+id/foreground"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@drawable/rounded_corners_white_filled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <View
            android:id="@+id/side_border"
            android:layout_width="10dp"
            android:layout_height="0dp"
            android:background="@color/colorPrimary"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shipment_number_tag"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/shipment_number"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/side_border"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shipment_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginLeft="4dp"
            android:layout_marginTop="8dp"
            android:text="122232"
            android:textColor="@android:color/black"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/shipment_number_tag"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/shipment_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:text="@string/category_already_added"
            android:textColor="#A1A1A1"
            app:layout_constraintStart_toEndOf="@+id/side_border"
            app:layout_constraintTop_toBottomOf="@+id/shipment_number_tag"
            app:layout_constraintWidth_percent="0.4" />

        <Button
            android:id="@+id/pending_button"
            android:layout_width="wrap_content"
            android:layout_height="30dp"
            android:layout_marginStart="16dp"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="8dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/button_oval_grey_filled"
            android:text="@string/pending"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toEndOf="@+id/side_border"
            app:layout_constraintTop_toBottomOf="@+id/shipment_description" />

        <View
            android:id="@+id/light_divider"
            android:layout_width="0.1dp"
            android:layout_height="0dp"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="24dp"
            android:background="@android:color/darker_gray"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/pickup_location"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:text="Salmiya"
            android:textColor="@android:color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/filled_circle"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/filled_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/light_divider"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_filled_circle" />

        <ImageView
            android:id="@+id/empty_circle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginEnd="32dp"
            android:layout_marginRight="32dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/light_divider"
            app:layout_constraintTop_toTopOf="@+id/drop_location_area"
            app:srcCompat="@drawable/ic_empty_circle" />

        <TextView
            android:id="@+id/drop_location_area"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginRight="8dp"
            android:layout_marginBottom="8dp"
            android:text="Hawalli"
            android:textColor="@android:color/black"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/empty_circle" />

        <View
            android:id="@+id/vertical_dotted_lines"
            android:layout_width="80dp"
            android:layout_height="0dp"
            android:layout_marginTop="4dp"
            android:layout_marginBottom="4dp"
            android:background="@drawable/vertical_dotted_lines_small"
            android:layerType="software"
            app:layout_constraintBottom_toTopOf="@+id/empty_circle"
            app:layout_constraintEnd_toEndOf="@+id/filled_circle"
            app:layout_constraintStart_toStartOf="@+id/filled_circle"
            app:layout_constraintTop_toBottomOf="@+id/filled_circle" />

    </android.support.constraint.ConstraintLayout>

</com.chauthai.swipereveallayout.SwipeRevealLayout>